<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="movie_catalog">🎬 Movie Catalog</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_movie_data">Upload Movie Data</string>
    <string name="reviews">Reviews</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="ratings">Ratings</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="category">Category</string>
    <string name="release_date">Release Date</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating_4_5">Rating: 4.5</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="wishlist">Wishlist</string>
    <string name="account_details">Account Details</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>